@@ -224,8 +224,10 @@ Config =
       'Filtered Backlinks':        [true,              'Mark backlinks to filtered posts.']
       'Font':                      ['Calibri',         'The font used by all elements of 4chan.', 'text']
       'Font Size':                 ['12px',            'The font size of posts and various UI. This does not change all font sizes.', 'text']
-      'Mascots':                   [false,             'Add a pretty picture of your waifu to the sidebar.']
+      'Mascots':                   [false,             'Add a pretty picture of your waifu to Appchan.']
       'Mascots Overlap Posts':     [true,              'Mascots overlap threads and posts.']
+      'Mascot Location':           ['sidebar',         'Change where your mascot is located.', ['sidebar', 'opposite']]
+      'Mascot Position':           ['bottom',          'Change where your mascot is placed in relation to the post form if the mascot isn\'t manually placed.', ['above post form', 'bottom']]
       'Rounded Edges':             [true,              'Round the edges of various 4chan elements.']
       'Sage Highlighting':         ['image',           'Icons or text to highlight saged posts.', ['text', 'image', 'none']]
       'Underline Links':           [true,              'Put lines under hyperlinks.']
